tests/parser/valid/function_with_params.src
fn add(int a, int b) -> int {
    return a + b;
}

fn main() {
    int result = add(5, 3);
    return result;
}