tests/parser/invalid/double_declaration.src
fn main() {
    int x = 5;
    int x = 10;  // Синтаксически допустимо, семантическая ошибка (будет в спринте 3)
    return x;
}